--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
     "@react-icons/all-files": "^4.1.0",
     "@react-ssr/core": "^0.21.18",
     "@react-ssr/express": "^0.21.18",
+    "@rooks/use-window-size": "^4.6.0",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "framer-motion": "^3.2.0",
     "jsdom": "^16.4.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
     "node-sass": "^4.14.1",
     "react": "^16.13.0",
     "react-bootstrap": "^1.4.0",
     "react-coverflow": "^0.2.20",
-    "react-dom": "^16.13.0"
+    "react-dom": "^16.13.0",
+    "react-particle-image": "^1.0.1",
+    "rooks": "^4.6.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
